bug fixes: autocomplete overflow, fonts in safari etc

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,10 +1,13 @@
+html {
+   -webkit-font-smoothing: subpixel-antialiased;
+}
 body {
     font-size: 14px;
     /*background: url(http://subtlepatterns.com/patterns/squairy_light.png);*/
 }
 .menu {
     list-style: none;
-    border-bottom: 0.1em solid black;
+    border-bottom: 0.1em solid bla
     margin-bottom: 2em;
     padding: 0 0 0.5em;
 }
@@ -152,19 +155,27 @@ div.tags {
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-in;
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);;
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     /*box-shadow: inset 0px 1px 10px 0px rgba(47, 50, 50, 1);*/
     margin: 0;
     /*background: #7E7E7E;*/
-    overflow: hidden;
 }
 .transactionForm {
+    -webkit-transition-property: opacity;
+    transition-property: opacity;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
     padding: 20px 30px;
+    opacity: 0;
+}
+.visible{
+    opacity: 1 !important;
 }
 .transactionForm .inputHost{
     vertical-align:top;
     width: 100%
-
 }
 .transactionForm .inputHost input{
     height: 35px;
@@ -197,10 +208,13 @@ tags-input .tags .input{
     background: #ffffff !important;
     color:red !important;
 }
-/*tr td{
+/*td{
     -webkit-transition:background-color 0.1s;
     transition:background-color 0.1s;
 }*/
+.striped td{
+    background:rgba(51, 51, 51, 0.25);
+}
 tr:hover td{
     background-color: rgba(231, 124, 124, 0.4) !important;
     cursor: pointer;
